--- a/HighCards/app/src/main/res/layout/activity_main.xml
+++ b/HighCards/app/src/main/res/layout/activity_main.xml
@@ -13,37 +13,27 @@
     android:background="#ffffff">
 
 
-
-
-
-
-    <Button
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="@string/Play"
-        android:id="@+id/button2"
-        android:onClick="playClicked"
-        android:layout_alignParentTop="true"
-        android:layout_alignParentRight="true"
-        android:layout_alignParentEnd="true" />
-
     <EditText
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:inputType="textPersonName"
-        android:text="Username"
+        android:text="Name"
         android:ems="10"
-        android:id="@+id/editText"
-        android:layout_alignTop="@+id/button2"
-        android:layout_toLeftOf="@+id/button2"
-        android:layout_toStartOf="@+id/button2" />
+        android:layout_alignParentTop="true"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true"
+        android:layout_marginLeft="62dp"
+        android:layout_marginStart="62dp"
+        android:layout_marginTop="32dp"
+        android:id="@+id/username_text" />
 
-    <Spinner
+    <Button
+        android:text="Imagem_Jogo"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:id="@+id/spinner"
-        android:layout_below="@+id/editText"
-        android:layout_toLeftOf="@+id/editText"
-        android:layout_toStartOf="@+id/editText" />
+        android:layout_centerVertical="true"
+        android:layout_centerHorizontal="true"
+        android:id="@+id/image_button"
+        android:onClick="button_play_clicked"/>
 
 </RelativeLayout>
